feat: 4장 - 프라이버시

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -1,1 +1,38 @@
-## 1장 다중 통화를 지원하는 Money 객체
+## 1장 다중 통화를 지원하는 Money 객체: TDD 방법
+### TDD 방법
+1. 필요한 Use Case를 나열한다. -> 테스트해야 하는 유스 케이스 문서(체크리스트)를 작성한다.
+2. 테스트 코드를 작성한다
+3. 테스트 코드가 실패하도록 한다. -> 테스트의 컴파일 오류를 제거한다.
+4. 테스트 코드가 성공하도록 한다.
+5. 소스 코드의 중복을 제거한다. -> 소스 코드를 리팩토링한다.
+6. 이를 모든 유스 케이스의 시나리오가 완성될 때까지 반복한다.
+7. 만약 작성 도중 새로운 시나리오가 등장하면, 유스 케이스 문서에 추가해둔다.
+
+> TDD의 핵심은 문제를 잘게 쪼개는 능력이다.
+> 한꺼번에 일을 진행하지 않고, 조금씩 단계를 쪼개는 능력으로 막히는 문제를 구체화하며 해결해야 한다.
+
+> 작동하는 코드를 먼저 만들고, 깔끔한 코드를 그 다음으로 만들자.
+
+## 2장 - 타락한 객체: 좋은 테스트 코드
+
+### 테스트 코드를 성공하도록 만드는 방법
+1. 가짜로 구현하기: 상수를 반환하게 만들고, 진짜 코드를 얻을 때까지 단계적으로 상수를 변수로 바꾸어 간다.
+2. 명백한 구현 사용하기: 일반화된 실제 구현을 입력한다.
+
+> 중요한 것은, 보폭의 조절이다.
+> 성큼 걸을 수 있다면 성큼 걷고, 성큼 걸어지지 않는다면 종종걸음으로 걸어라.
+ 
+### 좋은 테스트 코드
+- 설계상의 결함을 잡을 수 있는 테스트 코드를 작성하자. 사이드 이펙트가 보이도록 테스트 코드를 작성해라.
+- 코드의 "미적 판단"을 테스트에 담아낼 수 있도록 테스트 코드를 작성하자.
+- 설계가 올바르게 되어있는지 검토하기 위한 테스트 코드를 작성하자.
+
+
+## 3장 - 모두를 위한 평등: Value Object 테스트
+### 삼각 측량
+- 성공 테스트 케이스와 실패 테스트 케이스를 모두 작성하라.
+- 테스트 케이스는 2개 이상의 일반화 검증을 수행하라.
+- 테스트 케이스는 2개 이상의 경계값 검증을 수행하라.
+
+## 4장 - 프라이버시: private 접근 제어자 붙이기
+> 한 테스트 코드에는 되도록이면 한가지만 테스트할 수 있도록 설계해라.
