feat: 5장 - 솔직히 말하자면, Franc 클래스 생성

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -36,3 +36,12 @@
 
 ## 4장 - 프라이버시: private 접근 제어자 붙이기
 > 한 테스트 코드에는 되도록이면 한가지만 테스트할 수 있도록 설계해라.
+
+
+## 5장 - 솔직히 말하자면
+> 엄격한 규칙에 얽메이지 말고, 일단 쪼개라.
+
+> 중복을 제거하기 전에는 집에 가지 않겠다고 약속해라.
+
+
+## 6장 - 돌아온 모두를 위한 평등: 
