feat: 6장 - 돌아온 모두를 위한 평등

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -44,4 +44,7 @@
 > 중복을 제거하기 전에는 집에 가지 않겠다고 약속해라.
 
 
-## 6장 - 돌아온 모두를 위한 평등: 
+## 6장 - 돌아온 모두를 위한 평등: Equals 메소드를 Money 클래스로 옮기기
+코틀린의 Data class를 사용하고 있으므로 스킵함.
+
+## 
