feat: 8장 - 객체 만들기: Dollar/Franc 중복

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -49,3 +49,8 @@
 
 ## 7장 - 사과와 오렌지 - Franc와 Dollar 비교하기
 클래스 타입 불일치를 테스트 코드로 검증했다.
+
+## 8장 - 객체 만들기: Dollar/Franc 중복
+> 하위 클래스가 그다지 않은 일을 하고 있지 않다면, 하위 클래스를 제거하는건 어떨지 생각해봐라.
+- 하위 클래스에 대한 직접적인 참조(하위 클래스만의 메소드/필드 참조)가 제거된다면, 하위 클래스를 제거하기 위해 한발짝 다가갔다고 할 수 있다.
+> 테스트 코드의 생성 기준은 새로운 구현의 발생이 아닌 새로운 시나리오의 발생이다.
