feat: 9장 - 우리가 사는 시간: 통화 개념 도입

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -54,3 +54,12 @@
 > 하위 클래스가 그다지 않은 일을 하고 있지 않다면, 하위 클래스를 제거하는건 어떨지 생각해봐라.
 - 하위 클래스에 대한 직접적인 참조(하위 클래스만의 메소드/필드 참조)가 제거된다면, 하위 클래스를 제거하기 위해 한발짝 다가갔다고 할 수 있다.
 > 테스트 코드의 생성 기준은 새로운 구현의 발생이 아닌 새로운 시나리오의 발생이다.
+
+
+## 9장 - 우리가 사는 시간: 통화 개념 도입
+> 하던 일을 중단하고 전혀 다른 일을 하는 상태에서, 그 일을 또 중단하지는 말자.
+> 작업의 깊이가 지나치게 깊어지지 않도록 조심하자.
+
+> 언제나 개발과 유지보수를 위한 "최선의 보폭"이 제일 중요하다.
+> TDD도 결국은 생산성을 위한 도구이다.
+> 정해진 올바른 보폭이라는 건 존재하지 않는다.
