--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -63,3 +63,14 @@
 > 언제나 개발과 유지보수를 위한 "최선의 보폭"이 제일 중요하다.
 > TDD도 결국은 생산성을 위한 도구이다.
 > 정해진 올바른 보폭이라는 건 존재하지 않는다.
+
+
+## 10wkd - 흥미로운 시간: 공용 times
+> 때로는 이전에 했던 실수를 인정하고 되돌리는 과감함이 필요하다.
+
+### 반드시 테스트 코드를 작성하고 구현해야 하는 엄격한 규칙처럼 받아들이지 마라.
+- toString() 메소드를 테스트 코드를 작성하지 않고 구현했다.
+  - 화면에 나타나는 결과를 보기 위해 만들었다.
+  - 디버그 출력용으로만 쓰니, 잘못 구현되도 큰 문제가 없다.
+  - 이미 빨간 막대 상태에서 새로운 테스트를 작성하지는 않는게 좋아보인다.
+
