feat: 11장 - 모든 악의 근원: 중복 제거

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -65,7 +65,7 @@
 > 정해진 올바른 보폭이라는 건 존재하지 않는다.
 
 
-## 10wkd - 흥미로운 시간: 공용 times
+## 10장 - 흥미로운 시간: 공용 times
 > 때로는 이전에 했던 실수를 인정하고 되돌리는 과감함이 필요하다.
 
 ### 반드시 테스트 코드를 작성하고 구현해야 하는 엄격한 규칙처럼 받아들이지 마라.
@@ -74,3 +74,8 @@
   - 디버그 출력용으로만 쓰니, 잘못 구현되도 큰 문제가 없다.
   - 이미 빨간 막대 상태에서 새로운 테스트를 작성하지는 않는게 좋아보인다.
 
+## 11장 - 모든 악의 근원: 중목 제거
+> 중복은 제거하라. 소스 코드에서도, 테스트 코드에서도
+
+> 필요없는 테스트는 제거하라.
+> 불필요한 요구사항이 여전히 남아있는 것처럼 보일 수 있다.
