feat: 12장 - 드디어 더하기: 덧셈 구현

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -79,3 +79,15 @@
 
 > 필요없는 테스트는 제거하라.
 > 불필요한 요구사항이 여전히 남아있는 것처럼 보일 수 있다.
+
+
+## 12장 - 드디어, 더하기: 같은 타입 덧셈 구현
+- 문제를 쪼개라.
+  - 바로 어려운것부터 하지 말고, 쉬운 문제부터 차근차근 수행하라.
+  - 체계적인 상태를 유지해라.
+
+> 테스트 코드는 기교에 대한 통찰을 보장해주진 않지만, 기교를 적용할 준비를 돕는다.
+
+> 한번에 계산하기 어렵다면, 중간 상태를 생성해봐라.
+
+> 테스트를 구현하고 나면, 해당 테스트만을 만족시키는 스텁을 먼저 구현하라.
