feat: 13장 - 진짜로 만들기

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -91,3 +91,10 @@
 > 한번에 계산하기 어렵다면, 중간 상태를 생성해봐라.
 
 > 테스트를 구현하고 나면, 해당 테스트만을 만족시키는 스텁을 먼저 구현하라.
+
+
+## 13장 - 진짜로 만들기: stub 제거
+컴포지트 패턴이라면 때로는 기본 동작을 정의하는게 유용할수도 있다.
+개념적 일관성과 컴포지트 패턴 갖추기
+
+> 모든 중복이 제거되기 전까지는 테스트 코드를 통과한 것으로 치지 마라.
