feat: 14장 - 바꾸기: 환전 기능 구현

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -95,6 +95,14 @@
 
 ## 13장 - 진짜로 만들기: stub 제거
 컴포지트 패턴이라면 때로는 기본 동작을 정의하는게 유용할수도 있다.
+
 개념적 일관성과 컴포지트 패턴 갖추기
 
 > 모든 중복이 제거되기 전까지는 테스트 코드를 통과한 것으로 치지 마라.
+
+
+## 14장 - 바꾸기: 환전 기능 추가
+- 문제가 진척이 되지 않으면, 병목의 원인을 찾고, 별도의 테스트를 추가하라.
+
+
+## 15장 - 서로 다른 통화 더하기
