feat: 15장 - 서로 다른 통화 더하기

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -106,3 +106,5 @@
 
 
 ## 15장 - 서로 다른 통화 더하기
+- Expression.plus() 메소드가 추가되어야 하는 이유가 뭐지?
+- `val result = bank.reduce(fiveDollar.plus(tenFranc).plus(sevenDollar), "USD")`
