feat: 16장 - 드디어, 추상화

--- a/1부-화폐 예제.md
+++ b/1부-화폐 예제.md
@@ -108,3 +108,8 @@
 ## 15장 - 서로 다른 통화 더하기
 - Expression.plus() 메소드가 추가되어야 하는 이유가 뭐지?
 - `val result = bank.reduce(fiveDollar.plus(tenFranc).plus(sevenDollar), "USD")`
+
+## 16장 - 드디어, 추상화
+- Sum 클래스에 times 메소드가 존재하는게 옳은가???
+  - 난 아니라고 본다.
+  - Sum에 times 메소드가 들어갈거면, Sum 클래스 이름 자체가 잘못되었다고 본다.
